[gd_scene load_steps=3 format=2]

[ext_resource path="res://camera/FixedCameraTrigger.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 80 )

[node name="FixedCameraArea" type="Area2D"]
collision_layer = 524288
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CameraFocus" type="Position2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_FixedCameraTrigger_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_FixedCameraTrigger_body_exited"]
